--- a/package.json
+++ b/package.json
@@ -10,5 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pseudoDjnn/Note-Taker.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/pseudoDjnn/Note-Taker/issues"
+  },
+  "homepage": "https://github.com/pseudoDjnn/Note-Taker#readme"
 }
